[package]
authors = ["Alexandre Bury <alexandre.bury@gmail.com>", "Constantin Berhard <git.8.enormator@xoxy.net>"]
description = "The terminal-optimized word wrapping utils from the Cursive project"
documentation = "https://gyscos.github.io/Cursive/cursive/index.html"
keywords = ["terminal", "unicode", "line", "break", "wrap"]
categories = ["command-line-interface"]
license = "MIT"
name = "cursive_break"
readme = "Readme.md"
repository = "https://github.com/ConnyOnny/Terminal-Line-Break"
version = "0.4.1"

[dependencies]
unicode-segmentation = "1.0"
unicode-width = "0.1"

[lib]
name = "cursive_break"
